--- a/xinghe-generator/src/main/resources/vm/java/mapper.java.vm
+++ b/xinghe-generator/src/main/resources/vm/java/mapper.java.vm
@@ -1,20 +1,20 @@
 package ${packageName}.mapper;
 
 import java.util.List;
+
 import com.baomidou.mybatisplus.core.mapper.BaseMapper;
 import ${packageName}.domain.${ClassName};
 #if($table.sub)
-import ${packageName}.domain.${subClassName};
+import ${packageName}.domain .${subClassName};
 #end
 
 /**
  * ${functionName}Mapper接口
- * 
+ *
  * @author ${author}
  * @date ${datetime}
  */
-public interface ${ClassName}Mapper extends BaseMapper<${ClassName}>
-{
+public interface ${ClassName}Mapper extends BaseMapper<${ClassName}> {
 
     /**
      * 查询${functionName}列表
